Begins to add support for #65 evolution. Need to manage draft entries to fix it completely.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1444 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -590,11 +590,11 @@ manage_statements:
   - bank_account_statement
   - bank_account_statement_create
   - bank_account_statement_delete
+  - bank_account_statement_entries_dyta
   - bank_account_statement_point
   - bank_account_statement_update
   - bank_account_statements
   - bank_account_statements_dyta
-  - statement_entries_dyta
 # Gérer les mouvements de stocks
 manage_stock_moves:
   controller: management
