Begin to review accounting document printing (#48)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1456 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -716,6 +716,7 @@ print:
 print_accounting_document:
   controller: accountancy
   actions:
+  - document_configure
   - document_prepare # UNEXISTENT ACTION !!!
   - document_print # UNEXISTENT ACTION !!!
   - synthesis # UNEXISTENT ACTION !!!
