Begins to re-add journal print for #48. We also need to review journals and general_ledger.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1457 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -200,7 +200,7 @@ give_discounts_on_sale:
 import_export_entities:
   controller: relations
   actions: [entities_export, entities_import]
-# Gérer l'envoi et la réception d'e-mails
+# Gérer l'envoi de courriels
 mail_listings:
   controller: company
   actions: [listing_mail, listings]
