Closes #48 evolution with cleaning document templates. Permits to add document_print to the menu again.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1458 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -716,9 +716,8 @@ print:
 print_accounting_document:
   controller: accountancy
   actions:
-  - document_configure
   - document_prepare # UNEXISTENT ACTION !!!
-  - document_print # UNEXISTENT ACTION !!!
+  - document_print
   - synthesis # UNEXISTENT ACTION !!!
 # Rechercher et consulter des factures
 search_and_consult_invoices:
