Begins to add AJAX support for new items in dyselect and dyli
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1464 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -15,6 +15,7 @@ __minimum__:
   - company::unknown_action
   - company::user_statistics
   - company::welcome
+  - company::formalize
   - help::close
   - help::previous
   - help::search
