Fixes some bugs and begins #122
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1480 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -164,6 +164,7 @@ consult_tracking:
 create_estimates:
   controller: management
   actions:
+  - available_prices_dyli
   - clients_dyli
   - price_find
   - sale_order_contacts
