Fixes some bugs and add better system to look for accounts
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1481 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -210,8 +210,11 @@ mail_listings:
 manage_accounts:
   controller: accountancy
   actions:
+  - account
+  - account_children_dyta
   - account_create
   - account_delete
+  - account_journal_entries_dyta
   - account_update
   - accounts
   - accounts_dyta
