Add support for import data
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1482 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -206,6 +206,9 @@ import_export_entities:
 mail_listings:
   controller: company
   actions: [listing_mail, listings]
+import_data:
+  controller: company
+  actions: [import]
 # Gérer les comptes comptables
 manage_accounts:
   controller: accountancy
