Begin to add functionals tests
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1488 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -71,3 +71,5 @@ users_001:
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
+  salt: <%=salt='NaCl'%>
+  hashed_password: <%=User.encrypted_password('secret', salt)%>
