Fixes menu translation bug
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1498 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -501,9 +501,9 @@ manage_operations:
   - operation_natures_dyta
   - operation_products_dyli
   - operation_update
+  - operation_uses_dyta
   - operations
   - operations_dyta
-  - production::operation_uses_dyta
   - tool_use_create
   - unvalidated_operations
   - unvalidated_operations_dyta
