Add a table of futures events in Relations (#128)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1503 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -81,6 +81,7 @@ administrate_relations:
   - entities_dyli
   - index
   - recent_events_dyta
+  - user_future_events_dyta
 # Effectuer/Recharger des sauvegardes
 backup_company:
   controller: company
