--- a/test/fixtures/journal_records.yml
+++ b/test/fixtures/journal_records.yml
@@ -63,15 +63,16 @@
 journal_records_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
-  created_on: 2009-07-19
+  created_on: 2007-07-22
   creator_id: 1
   credit: 0
   debit: 0
+  financialyear_id: 1
   id: 1
   journal_id: 1
   number: "XYZ0001"
   position: 0
-  printed_on: 2009-07-19
+  printed_on: 2007-07-20
   status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -83,11 +84,46 @@ journal_records_002:
   creator_id: 1
   credit: 0
   debit: 0
+  financialyear_id: 1
   id: 2
   journal_id: 1
   number: "XYZ0002"
   position: 0
-  printed_on: 2009-07-19
+  printed_on: 2007-07-25
+  status: "A"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+journal_records_003:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  credit: 0
+  debit: 0
+  financialyear_id: 1
+  id: 3
+  journal_id: 1
+  number: "XYZ0003"
+  position: 0
+  printed_on: 2007-05-19
+  status: "A"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+journal_records_004:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  credit: 0
+  debit: 0
+  financialyear_id: 1
+  id: 4
+  journal_id: 1
+  number: "XYZ0003"
+  position: 0
+  printed_on: 2007-01-19
   status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
