Contiue to fix bugs and evolutions Always INSTABLE!
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1524 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -20,28 +20,28 @@
 # 
 # == Table: journal_entries
 #
-#  account_id      :integer          not null
-#  closed          :boolean          not null
-#  comment         :text             
-#  company_id      :integer          not null
-#  created_at      :datetime         not null
-#  creator_id      :integer          
-#  credit          :decimal(16, 2)   default(0.0), not null
-#  currency_credit :decimal(16, 2)   default(0.0), not null
-#  currency_debit  :decimal(16, 2)   default(0.0), not null
-#  debit           :decimal(16, 2)   default(0.0), not null
-#  draft           :boolean          not null
-#  expired_on      :date             
-#  id              :integer          not null, primary key
-#  journal_id      :integer          
-#  letter          :string(8)        
-#  lock_version    :integer          default(0), not null
-#  name            :string(255)      not null
-#  position        :integer          
-#  record_id       :integer          not null
-#  statement_id    :integer          
-#  updated_at      :datetime         not null
-#  updater_id      :integer          
+#  account_id        :integer          not null
+#  bank_statement_id :integer          
+#  closed            :boolean          not null
+#  comment           :text             
+#  company_id        :integer          not null
+#  created_at        :datetime         not null
+#  creator_id        :integer          
+#  credit            :decimal(16, 2)   default(0.0), not null
+#  currency_credit   :decimal(16, 2)   default(0.0), not null
+#  currency_debit    :decimal(16, 2)   default(0.0), not null
+#  debit             :decimal(16, 2)   default(0.0), not null
+#  draft             :boolean          not null
+#  expired_on        :date             
+#  id                :integer          not null, primary key
+#  journal_id        :integer          
+#  letter            :string(8)        
+#  lock_version      :integer          default(0), not null
+#  name              :string(255)      not null
+#  position          :integer          
+#  record_id         :integer          not null
+#  updated_at        :datetime         not null
+#  updater_id        :integer          
 #
 #
 # == Fixture: journal_entries
