--- a/config/rights.yml
+++ b/config/rights.yml
@@ -196,8 +196,7 @@ create_purchases:
   - purchase_payment_create
   - purchase_payment_delete
   - purchase_payment_part_create
-  - purchase_payment_part_delete # UNEXISTENT ACTION !!!
-  - purchase_payment_part_update # UNEXISTENT ACTION !!!
+  - purchase_payment_part_delete
   - purchase_payment_purchase_orders_dyta
   - purchase_payment_update
   - purchase_payments
@@ -402,12 +401,17 @@ manage_entries:
   - account_dyli
   - account_letter
   - account_unletter
+  - journal
+  - journal_entries_dyta
   - journal_entry_create
+  - journal_mixed_dyta
   - journal_record
   - journal_record_create
   - journal_record_entries_dyta
   - journal_record_update
   - journal_records_dyta
+  - journals
+  - journals_dyta
   - lettering
 # Gérer les évènements
 manage_events:
