--- a/test/fixtures/journal_records.yml
+++ b/test/fixtures/journal_records.yml
@@ -20,6 +20,7 @@
 # 
 # == Table: journal_records
 #
+#  always_draft    :boolean          not null
 #  closed          :boolean          
 #  company_id      :integer          not null
 #  created_at      :datetime         not null
@@ -31,6 +32,7 @@
 #  currency_id     :integer          default(0), not null
 #  currency_rate   :decimal(16, 6)   default(0.0), not null
 #  debit           :decimal(16, 2)   default(0.0), not null
+#  draft           :boolean          not null
 #  id              :integer          not null, primary key
 #  journal_id      :integer          not null
 #  lock_version    :integer          default(0), not null
@@ -39,7 +41,6 @@
 #  printed_on      :date             not null
 #  resource_id     :integer          
 #  resource_type   :string(255)      
-#  status          :string(1)        default("A"), not null
 #  updated_at      :datetime         not null
 #  updater_id      :integer          
 #
@@ -47,6 +48,7 @@
 # == Fixture: journal_records
 #
 # journal_records_001:
+#   always_draft: true
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
@@ -57,12 +59,12 @@
 #   currency_id: 1
 #   currency_rate: 0
 #   debit: 0
+#   draft: true
 #   id: 1
 #   journal_id: 1
 #   number: "Lorem ipsum"
 #   position: 0
 #   printed_on: 2009-07-19
-#   status: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -79,7 +81,6 @@ journal_records_001:
   number: "XYZ0001"
   position: 0
   printed_on: 2007-07-20
-  status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
@@ -98,7 +99,6 @@ journal_records_002:
   number: "XYZ0002"
   position: 0
   printed_on: 2007-07-25
-  status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
@@ -116,7 +116,6 @@ journal_records_003:
   number: "XYZ0003"
   position: 0
   printed_on: 2007-05-19
-  status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
@@ -134,7 +133,6 @@ journal_records_004:
   number: "XYZ0004"
   position: 0
   printed_on: 2007-01-19
-  status: "A"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
