--- a/test/fixtures/journal_records.yml
+++ b/test/fixtures/journal_records.yml
@@ -20,7 +20,6 @@
 # 
 # == Table: journal_records
 #
-#  always_draft    :boolean          not null
 #  closed          :boolean          
 #  company_id      :integer          not null
 #  created_at      :datetime         not null
@@ -33,6 +32,7 @@
 #  currency_rate   :decimal(16, 6)   default(0.0), not null
 #  debit           :decimal(16, 2)   default(0.0), not null
 #  draft           :boolean          not null
+#  draft_mode      :boolean          not null
 #  id              :integer          not null, primary key
 #  journal_id      :integer          not null
 #  lock_version    :integer          default(0), not null
@@ -48,7 +48,6 @@
 # == Fixture: journal_records
 #
 # journal_records_001:
-#   always_draft: true
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
@@ -60,6 +59,7 @@
 #   currency_rate: 0
 #   debit: 0
 #   draft: true
+#   draft_mode: true
 #   id: 1
 #   journal_id: 1
 #   number: "Lorem ipsum"
