--- a/test/fixtures/purchase_orders.yml
+++ b/test/fixtures/purchase_orders.yml
@@ -34,6 +34,7 @@
 #  lock_version      :integer          default(0), not null
 #  moved_on          :date             
 #  number            :string(64)       not null
+#  parts_amount      :decimal(16, 2)   default(0.0), not null
 #  planned_on        :date             
 #  shipped           :boolean          not null
 #  supplier_id       :integer          not null
@@ -51,6 +52,7 @@
 #   creator_id: 1
 #   id: 1
 #   number: "Lorem ipsum"
+#   parts_amount: 0
 #   shipped: true
 #   supplier_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
