--- a/test/fixtures/purchase_payment_modes.yml
+++ b/test/fixtures/purchase_payment_modes.yml
@@ -24,6 +24,7 @@
 #  company_id      :integer          not null
 #  created_at      :datetime         not null
 #  creator_id      :integer          
+#  draft_mode      :boolean          not null
 #  id              :integer          not null, primary key
 #  lock_version    :integer          default(0), not null
 #  name            :string(50)       not null
@@ -38,6 +39,7 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   draft_mode: true
 #   id: 1
 #   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
