--- a/test/fixtures/sale_payment_modes.yml
+++ b/test/fixtures/sale_payment_modes.yml
@@ -23,10 +23,12 @@
 #  account_id            :integer          
 #  cash_id               :integer          
 #  commission_account_id :integer          
+#  commission_amount     :decimal(16, 2)   default(0.0), not null
 #  commission_percent    :decimal(16, 2)   default(0.0), not null
 #  company_id            :integer          not null
 #  created_at            :datetime         not null
 #  creator_id            :integer          
+#  draft_mode            :boolean          not null
 #  id                    :integer          not null, primary key
 #  lock_version          :integer          default(0), not null
 #  name                  :string(50)       not null
@@ -41,10 +43,12 @@
 # == Fixture: sale_payment_modes
 #
 # sale_payment_modes_001:
+#   commission_amount: 0
 #   commission_percent: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   draft_mode: true
 #   id: 1
 #   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
